# trycamera

./: CMakeLists.txt  README.md
include/: camera.hpp
src/: main.cpp
